# properst

./: .gitignore  CHANGELOG.md  README.org  properst.cabal
src/: Main.hs
src/Text/: Polyglot.hs
src/Text/Polyglot/: Char.hs
