name:                properst
version:             0.1.0.0
synopsis:            A command-line utility for manipulating propositions
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Chris Smeele
maintainer:          chris@cjsmeele.nl
-- copyright:
category:            Math
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.org
cabal-version:       >=1.10

executable properst
  main-is:             Main.hs
  other-modules:       Text.Polyglot
                     , Text.Polyglot.Char
  -- other-extensions:
  build-depends:       base >=4.11 && <5
                     , containers
  hs-source-dirs:      src
  default-language:    Haskell2010
